@@ -83,7 +83,7 @@ public final class TkRetryTest {
         } catch (final IOException exception) {
             final long spent = System.nanoTime() - start;
             MatcherAssert.assertThat(
-                new Long(count * delay - Tv.HUNDRED) * Tv.MILLION,
+                Long.valueOf(count * delay - Tv.HUNDRED) * Tv.MILLION,
                 Matchers.lessThanOrEqualTo(spent)
             );
             throw exception;
@@ -112,7 +112,7 @@ public final class TkRetryTest {
         );
         final long spent = System.nanoTime() - start;
         MatcherAssert.assertThat(
-            new Long(delay - Tv.HUNDRED) * Tv.MILLION,
+            Long.valueOf(delay - Tv.HUNDRED) * Tv.MILLION,
             Matchers.lessThanOrEqualTo(spent)
         );
         MatcherAssert.assertThat(
